# gql-client-rs

./: .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  Contributors.md  LICENSE  README.md  rust-toolchain.toml  rustfmt.toml
.github/workflows/: check.yml  release.yml
src/: client.rs  error.rs  lib.rs  types.rs
tests/: errors.rs  queries.rs  requests.rs  reqwest.rs  structs.rs
