[package]
name = "gql_client"
version = "0.1.0"
authors = ["Arthur Khlghatyan <arthur.khlghatyan@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.10", features = ["json"] }

[dev-dependencies]
tokio = { version = "0.2", features = ["full"] }