[package]
name = "gql_client"
version = "0.1.1"
authors = ["Arthur Khlghatyan <arthur.khlghatyan@gmail.com>"]
edition = "2018"
description = "Minimal GraphQL client for Rust"
readme = "README.md"
homepage = "https://github.com/arthurkhlghatyan/gql-client-rs"
repository = "https://github.com/arthurkhlghatyan/gql-client-rs"
license = "MIT"
keywords = ["graphql", "client", "async", "web", "http"]
categories = ["web-programming", "asynchronous"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.10", features = ["json"] }

[dev-dependencies]
tokio = { version = "0.2", features = ["full"] }