[package]
name = "gql_client"
version = "1.0.1"
authors = ["Arthur Khlghatyan <arthur.khlghatyan@gmail.com>"]
edition = "2018"
description = "Minimal GraphQL client for Rust"
readme = "README.md"
homepage = "https://github.com/arthurkhlghatyan/gql-client-rs"
repository = "https://github.com/arthurkhlghatyan/gql-client-rs"
license = "MIT"
keywords = ["graphql", "client", "async", "web", "http"]
categories = ["web-programming", "asynchronous"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest    = { version = "0.11", features = ["json"] }
log        = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }